# solrise

./: README.md  pyproject.toml
episode_1/: sunrise.py
episode_2/: sunrise.py
episode_3/: sunrise.py
episode_4/: sunrise.py  sunrise_table.py
solrise/: 0_sunrise.py  sunrise_table.py
